--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.3",
+    "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
