--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+		"sourceMap": true,
+		"experimentalDecorators": true,
     "baseUrl": ".",
     "types": [
       "webpack-env",
